# nitripid

./: Cargo.toml  LICENSE  README.md
config/: base.yml
examples/: simple-tide.rs
src/: configuration.rs  lib.rs  main.rs
src/controller/: mod.rs  tide_web_controller.rs  web.rs
src/service/: mod.rs
src/service/jinja/: mod.rs  tera.rs
src/service/login/: mod.rs
src/service/template/: mod.rs  tera.rs
web/static/: style.css
web/templates/: base.html  login.html  main.html
